# usb_relay_node

./: CMakeLists.txt  LICENSE  README.md  README_wsn.md  macos.py  package.xml  relay_bridge.py  relay_err_output  setup.py
bin-Linux-x64/: usb_relay_device.md
launch/: usb_relay_cpython.launch
msg/: RelayState.msg  RelayStates.msg
src/: ros_relay_bridge.py  ros_relay_cpython_bridge.py  set_serial.py
src/usb_relay/: README.md  __init__.py  set_serial.py
src/usb_relay/examples/: by-name.py  list-relays.py  on-off.py
srv/: SetRelay.srv
